--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+# Ignore Mac trash
+.DS_Store
+
 # Ignore Gradle build output directory
 build
 /app/set.txt
@@ -13,3 +16,9 @@ report/main.log
 report/main.out
 report/main.synctex.gz
 report/main.toc
+
+# Ignore .txt files
+seq_cons.txt
+set.txt
+seq_cons.txt
+set_dynamic.txt
